# glarses

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.json
app/: CMakeLists.txt  main.cpp
assets/shaders/: basic_triangle.frag  basic_triangle.vert  simple.frag  simple.vert
cmake/: vcpkg.cmake
dependencies/: CMakeLists.txt
dependencies/include/: types.h
dependencies/src/: tlsf.c
docs/: coroutines.md  ndk.txt  notes.md
docs/NDK/html/: a00002_source.html  a00008.html  a00008.js  a00008_source.html  a00011.html  a00011.js  a00011_source.html  a00017_source.html  a00020.html  a00020.js  a00020_source.html  a00021.map  a00021.md5  a00023.html  a00023.js  a00023_source.html  a00024.map  a00024.md5  a00026.html  a00026.js  a00026_source.html  a00029.html  a00029.js  a00030.html  a00030.js  a00032.html  a00033.html  a00034.html  a00035.html  a00035.js  a00036.html  a00036.js  a00037.html  a00037.js  a00038.html  a00039.html  a00040.html  a00040.js  a00041.html  a00042.html  (+69 more)
docs/NDK/html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_16.js  all_17.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_f.js  classes_1.js  classes_11.js  classes_13.js  enums_9.js  enumvalues_6.js  files_0.js  files_4.js  functions_1.js  functions_11.js  functions_12.js  functions_13.js  functions_3.js  functions_7.js  functions_e.js  pages_0.js  pages_1.js  pages_2.js  related_2.js  variables_1.js  variables_11.js  variables_12.js  variables_13.js  variables_15.js  variables_16.js  (+7 more)
glarses/: CMakeLists.txt  application.cpp  application.h  cube.cpp  cube.h  dependencies.cpp  dependencies.h  glarses.cpp  glarses.h  index_buffer.h  player.cpp  player.h  render_target.cpp  render_target.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  uniform_buffer.h  window.cpp  window.h
glarses/core/: engine.cpp  engine.h  engine.inl  module.cpp  module.h  module.inl  system.cpp  system.h  system.inl
glarses/core/scheduler/: job.h
glarses/io/: bitmap.cpp  bitmap.h  file.cpp  file.h  search_paths.cpp  search_paths.h
glarses/log/: log_category.cpp  log_category.h  log_message.cpp  log_message.h  log_message.inl  log_sink.cpp  log_sink.h  log_sink.inl  logger.cpp  logger.h
glarses/math/: extent2d.cpp  extent2d.h  extent3d.cpp  extent3d.h  offset2d.cpp  offset2d.h  offset3d.cpp  offset3d.h  rect.h  rect2d.h  transform.cpp  transform.h
glarses/opengl/: buffer.cpp  buffer.h  data_buffer.cpp  data_buffer.h  data_buffer.inl  dispatch_indirect_command.cpp  dispatch_indirect_command.h  draw_indexed_indirect_command.cpp  draw_indexed_indirect_command.h  draw_indirect_command.cpp  draw_indirect_command.h  frame_buffer.cpp  frame_buffer.h  framebuffer.cpp  framebuffer.h  gltypes.cpp  gltypes.h  index_buffer.h  render_buffer.cpp  render_buffer.h  render_target.cpp  render_target.h  renderbuffer.cpp  renderbuffer.h  shader.cpp  shader.h  shader_program.cpp  shader_program.h  texture.cpp  texture.h  uniform_buffer.cpp  uniform_buffer.h  uniform_buffer.inl  vertex.cpp  vertex.h  vertex_array.cpp  vertex_array.h  vertex_attribute.h  vertex_buffer.cpp  vertex_buffer.h  (+1 more)
glarses/opengl/buffers/: buffer_access.cpp  buffer_access.h  data_type.cpp  data_type.h  frame_buffer.cpp  frame_buffer.h  index_buffer.cpp  index_buffer.h  shader_storage_buffer.cpp  shader_storage_buffer.h  uniform_buffer.cpp  uniform_buffer.h  uniform_buffer.inl  vertex_array.cpp  vertex_array.h  vertex_array.inl  vertex_buffer.h  vertex_buffer.inl
glarses/opengl/resources/: shader.h
glarses/os/: crash_handler.h  crash_handler_windows.cpp  dynamic_library.h  dynamic_library_windows.cpp  window.cpp  window.h
glarses/scene/: camera.h  cube.cpp  cube.h  material.h  scene.h  simple_shader_program.cpp  simple_shader_program.h
glarses/t5/: t5_client.cpp  t5_client.h  t5_context.cpp  t5_context.h  t5_gameboard.cpp  t5_gameboard.h  t5_glasses.cpp  t5_glasses.h  t5_manager.cpp  t5_manager.h
glarses/util/: active_object.cpp  active_object.h  aggregate.h  aggregate.inl  algorithm.h  algorithm.inl  array.h  array.inl  atomic.cpp  atomic.h  concepts.h  defer.h  defer.inl  filesystem.cpp  filesystem.h  flags.h  flags.inl  flat_map.h  flat_map.inl  function.h  function.inl  mediator.h  mediator.inl  memory.cpp  memory.h  move_on_copy.h  move_on_copy.inl  named_thread.cpp  named_thread.h  named_thread.inl  preprocessor.h  process.cpp  process.h  process_windows.cpp  repeating_action.h  repeating_action.inl  service.h  shared_queue.h  shared_queue.inl  spin_lock.cpp  (+14 more)
glarses/util/coro/: coro_functor.cpp  coro_functor.h  coro_functor.inl  ready_awaitable.h  ready_awaitable.inl
glarses/util/detail/: allocator_base.h  double_stack_allocator.cpp  double_stack_allocator.h  heap_allocator.cpp  heap_allocator.h  linear_allocator.cpp  linear_allocator.h  mallocator.cpp  mallocator.h  mediator_queue.h  mediator_queue.inl  memory_statistics.cpp  memory_statistics.h  memory_utils.h  memory_utils.inl  stack_allocator.cpp  stack_allocator.h
glarses/util/meta/: identity.h  identity.inl
test/: CMakeLists.txt  unittest.cpp  unittest.h
test/io/: test_bitmap.cpp  test_file.cpp
test/math/: test_transform.cpp
test/util/: test_aggregate.cpp  test_array.cpp  test_concepts.cpp  test_process_binary.cpp  test_process_windows.cpp  test_string.cpp
